--- a/index.html
+++ b/index.html
@@ -4,60 +4,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <link rel="'stylesheet" href="assets/css/style.css">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="assets/css/style.css">
   
   <title>Frontend Mentor | Bento grid</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  
 </head>
 <body>
-  
-  <div class="fiveStars">
+  <div class="conteneur">
+  <div class="conteneur__li fiveStars">
   <h1>Social Media 10x Faster with AI</h1>
   <img src="assets/images/illustration-five-stars.webp" alt="Five stars rating">
   <p>Over 4,000 5-star reviews</p>
   </div>
 
-  <div class="multipleAccounts">
+  <div class="conteneur__li multipleAccounts">
   <img src="assets/images/illustration-multiple-platforms.webp" alt="Multiple platforms">
   <h2>Manage multiple accounts and platforms.</h2>
 </div>
 
-<div class="scheduleContent">
-  <h2>Maintain a consistent posting schedule.<h2>
+<div class="conteneur__li scheduleContent">
+  <h2>Maintain a consistent posting schedule.</h2>
   <img src="assets/images/illustration-consistent-schedule.webp" alt="Consistent schedule">
 </div>
-
-<div class="scheduleSocialMedia">
+<div class="conteneur__li scheduleSocialMedia">
   <h2>Schedule to social media.</h2>
   <img src="assets/images/illustration-schedule-posts.webp" alt="Grow followers">
   <p>Optimize post timings to publish content at the perfect time for your audience.</p>
 </div>
 
-<div class="growFollowers">
+<div class="conteneur__li growFollowers">
   <img src="assets/images/illustration-grow-followers.webp" alt="Grow followers">
   <h2>Grow followers with non-stop content.</h2>
 </div>
 
-<div class="fasterAudience">
+<div class="conteneur__li fasterAudience">
   <h2>56%</h2> 
   <p>faster audience growth</p>
   <img src="assets/images/illustration-audience-growth.webp" alt="Audience growth">
 </div>
 
-<div class="createSchedule">
+<div class="conteneur__li createSchedule">
   <h2>Create and schedule content quicker.</h2>
   <img src="assets/images/illustration-create-post.webp" alt="Quick schedule">
 </div>
 
-<div class="aiContent">
+<div class="conteneur__li aiContent">
   <h2>Write your content using AI.</h2>
   <img src="assets/images/illustration-ai-content.webp" alt="AI content">
+</div>
+</div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor</a>. 
