--- a/index.html
+++ b/index.html
@@ -13,47 +13,52 @@
 </head>
 <body>
   <div class="conteneur">
+  <!--1-->
   <div class="conteneur__li fiveStars">
   <h1>Social Media 10x Faster with AI</h1>
   <img src="assets/images/illustration-five-stars.webp" alt="Five stars rating">
   <p>Over 4,000 5-star reviews</p>
   </div>
-
+<!--2-->
   <div class="conteneur__li multipleAccounts">
   <img src="assets/images/illustration-multiple-platforms.webp" alt="Multiple platforms">
   <h2>Manage multiple accounts and platforms.</h2>
 </div>
-
+<!--3-->
 <div class="conteneur__li scheduleContent">
   <h2>Maintain a consistent posting schedule.</h2>
   <img src="assets/images/illustration-consistent-schedule.webp" alt="Consistent schedule">
 </div>
+<!--4-->
 <div class="conteneur__li scheduleSocialMedia">
   <h2>Schedule to social media.</h2>
   <img src="assets/images/illustration-schedule-posts.webp" alt="Grow followers">
   <p>Optimize post timings to publish content at the perfect time for your audience.</p>
 </div>
-
+<!--5-->
 <div class="conteneur__li growFollowers">
   <img src="assets/images/illustration-grow-followers.webp" alt="Grow followers">
   <h2>Grow followers with non-stop content.</h2>
 </div>
-
+<!--6-->
 <div class="conteneur__li fasterAudience">
   <h2>56%</h2> 
   <p>faster audience growth</p>
   <img src="assets/images/illustration-audience-growth.webp" alt="Audience growth">
 </div>
 
+<section class="conteneur__sectionGauche">
+<!--7-->
 <div class="conteneur__li createSchedule">
   <h2>Create and schedule content quicker.</h2>
   <img src="assets/images/illustration-create-post.webp" alt="Quick schedule">
 </div>
-
+<!--8-->
 <div class="conteneur__li aiContent">
   <h2>Write your content using AI.</h2>
   <img src="assets/images/illustration-ai-content.webp" alt="AI content">
 </div>
+</section>
 </div>
   
   <div class="attribution">
