--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="conteneur">
   <!--1-->
   <div class="conteneur__li fiveStars">
-  <h1>Social Media 10x Faster with AI</h1>
+  <h1>Social Media <span class="fiveStars__span">10x</span> <i>Faster</i> with AI</h1>
   <img src="assets/images/illustration-five-stars.webp" alt="Five stars rating">
   <p>Over 4,000 5-star reviews</p>
   </div>
@@ -42,7 +42,7 @@
 </div>
 <!--6-->
 <div class="conteneur__li fasterAudience">
-  <h2>56%</h2> 
+  <span class="fasterAudience__span">>56%</span> 
   <p>faster audience growth</p>
   <img src="assets/images/illustration-audience-growth.webp" alt="Audience growth">
 </div>
@@ -50,7 +50,7 @@
 <section class="conteneur__sectionGauche">
 <!--7-->
 <div class="conteneur__li createSchedule">
-  <h2>Create and schedule content quicker.</h2>
+  <h2>Create and schedule content <span class="createSchedule__span"><i>quicker</i></span>.</h2>
   <img src="assets/images/illustration-create-post.webp" alt="Quick schedule">
 </div>
 <!--8-->
